--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,3 +5,11 @@
 <p>Забронюйте свій наступний тур з нами!</p>
 <a href="{{ url_for('tours.add_tour') }}">Додати новий тур</a>
 {% endblock %}
+
+{% extends "_base.html" %}
+
+{% block content %}
+<h1>Ласкаво просимо до туристичного агентства!</h1>
+<p>Забронюйте свій наступний тур з нами!</p>
+<a href="{{ url_for('tours.list_tours') }}">Переглянути доступні тури</a>
+{% endblock %}
