--- a/app/templates/list_tours.html
+++ b/app/templates/list_tours.html
@@ -9,7 +9,8 @@
     <li>
         <h3>{{ tour.name }} - {{ tour.destination }}</h3>
         <p>Ціна: {{ tour.price }} USD</p>
-        <a href="{{ url_for('tours.tour_detail', tour_id=tour.id) }}">Переглянути деталі</a>
+        <p>Тривалість: {{ tour.duration_days }} днів</p>
+        <p>{{ tour.description }}</p>
     </li>
     {% endfor %}
 </ul>
